Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/ProjectPage/AssignedUsers/UsersList/User/User.scss
+++ b/client/src/components/pages/ProjectPage/AssignedUsers/UsersList/User/User.scss
@@ -9,6 +9,9 @@
 
     .profile-icon {
         width: 40px;
+        height:40px;
+        object-fit: cover;
+        object-position: 50% 50%;
         border-radius: 50%;
     }
 
